<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SettingsManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="system_volume">System Volume</string>
    <string name="profile_name_edit_hint">Profile Name</string>
    <string name="long_hold_message">What do you want to do?</string>
    <string name="edit">Edit</string>
    <string name="data_file_name">PROFILE_DATA</string>
    <string name="add_new">Add New</string>
    <string name="ring_volume">Ringer Volume</string>
    <string name="ring_sound">Ringer Sound</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="notification_volume">Notification Volume</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="title_activity_favorite_quotes">Your Favorite Quotes</string>
    <string name="title_activity_change_settings_menu">Change Settings</string>
    <string name="brightness">Brightness</string>
    <string name="reset">Reset App</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="reset_short">Reset</string>
    <string name="reset_description">Resetting this app will delete ALL of your profiles. Are you sure you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="main_title">Settings Manager</string>
    <string name = "edit_profile_activity">Edit Profile</string>
    <string name = "add_profile_activity">Add Profile</string>

</resources>
