<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditProfile" >

    <TableRow
        android:id="@+id/edit_table_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText1"
            android:hint="@string/profile_name_edit_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5" >

            <requestFocus />
        </EditText>
    </TableRow>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/edit_table_two"
        android:layout_below="@id/edit_table_one" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_volume"/>
            <SeekBar
                android:id="@+id/system_volume_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ring_volume"/>
            <SeekBar
                android:id="@+id/ring_volume_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_volume"/>
            <SeekBar
                android:id="@+id/notification_volume_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_volume"/>
            <SeekBar
                android:id="@+id/alarm_volume_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
            
        </LinearLayout>
    </ScrollView>

    <TableRow
        android:id="@id/edit_table_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_weight="1" />
    </TableRow>

</RelativeLayout>